chore: update gradle lockfiles
Signed-off-by: Sam Gammon <sam@elide.ventures>